fixed wrap in mobile display

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,13 +13,6 @@ body{
     }
 }
 
-@media (max-width: 500px){
-    .sideBar{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-}
 
 
 
